# beanie_1_0_release_demo

./: article.md  pyproject.toml
beanie_1_0_release_demo/: main.py  models.py  settings.py
tests/: test_beanie_1_0_release_demo.py
