[tool.poetry]
name = "beanie_1_0_release_demo"
version = "0.1.0"
description = ""
authors = ["Roman <roman.korolev@teraki.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beanie = "1.0.0b3"
pydantic = "^1.8.1"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
